samples/_failures_safe/1761698629_a17291_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9348e57a.c: In function ‘main’:
./samples/SAFE/__tmp_9348e57a.c:154:32: error: expected ‘;’ at end of input
  154 |         result.cols = mat1.cols
      |                                ^
      |                                ;
./samples/SAFE/__tmp_9348e57a.c:154:9: error: expected declaration or statement at end of input
  154 |         result.cols = mat1.cols
      |         ^~~~~~
./samples/SAFE/__tmp_9348e57a.c:154:9: error: expected declaration or statement at end of input
